# SQL-DataTool

./: CMakeLists.txt  Condition.cpp  Condition.h  DataBase.cpp  DataBase.h  Delete.cpp  Delete.h  Exceptions.h  Exporter.cpp  Exporter.h  ExporterKekec.cpp  ExporterKekec.h  ExporterSQL.cpp  ExporterSQL.h  Insert.cpp  Insert.h  README.md  Select.cpp  Select.h  Slicer.cpp  Slicer.h  Statment.cpp  Statment.h  TableMK2.cpp  TableMK2.h  Update.cpp  Update.h  main.cpp
